# NUST_MISIS

./: .gitignore  1100C  1100C.cpp  1330A  1404A  1512C  1559A.cpp  1670B  1703  1703C.cpp  1721A  1721A.cpp  README.md  hw-05-01  hw-05-02
kr_11.10/: 0136A.cpp  136A  1585A  1585A.cpp  1692  1692C.cpp
reshetnyak_s_a/: 0485A.cpp  0886B.cpp  0935B.cpp  0967B.cpp  1017A.cpp  1165B.cpp  1404A.cpp  1512C.cpp  1669D.cpp  1675C.cpp  1690D.cpp  1699B.cpp  1734B.cpp  1744C.cpp  1744D.cpp  bpm_22_4_1.cpp  bpm_22_4_2.cpp  bpm_22_4_3.cpp  hw-05-01.cpp  math_oper_vectors.cpp
reshetnyak_s_a/math_vec/: CMakeLists.txt  README.md  data_out.csv  vectors.test  vectors.test.cpp  vectors_entrypoint.cpp  vectors_models.cpp  vectors_models.hpp  vectors_test.cpp
reshetnyak_s_a/math_vec/lib-vectors/: vectors.hpp
reshetnyak_s_a/math_vec/python-scripts/: plot.py  test_data.txt
reshetnyak_s_a/math_vec/vectors/: CMakeLists.txt  vectors.cpp  vectors.hpp
reshetnyak_s_a/tasks_from_cf/: 0136B.cpp  0579.cpp  0879B.cpp  1330A.cpp  1512C.cpp  1649A.cpp  1670B.cpp  1675C.cpp  1744C.cpp  hw-05-02.cpp
